--- a/Index.html
+++ b/Index.html
@@ -80,7 +80,7 @@
     <h2>My Blogs</h2>
 
     <article>
-      <h3>Blog Title 1</h3>
+      <h3>My First Blog</h3>
       <p><em>Published on Oct 3, 2025</em></p>
       <p>This is a short intro of my first blog post. You can write longer posts here.</p>
     </article>
